@@ -33,6 +33,9 @@ DESCRIPTION
     called in scalar context, they return the first value (or an empty
     string). If called in array context, they return all values.
 
+    true values should be specified as 1 and false values as 0. Future API
+    changes may provide different functions when other values are used.
+
       This file is automatically generated by pod2readme from PKCS10.pm and Changes.
 
 NAME
@@ -62,7 +65,11 @@ RELEASE NOTES
 
     Version 1.7 provides support for DSA and ECC public keys. By default,
     it verifies the signature of CSRs. It also allows the caller to verify
-    the signature of a CSR.
+    the signature of a CSR. subjectPublicKeyParams and signatureParams
+    provide additional information. The readFile option to new() will
+    open() a file containing a CSR by name. The ignoreNonBase64 option
+    allows PEM to contain extraneous characters. Changes describes
+    additional improvements. Details follow.
 
 INSTALLATION
 
@@ -131,8 +138,10 @@ METHODS
     Constructor, creates a new object containing the parsed PKCS #10
     certificate request.
 
-    $csr may be a scalar containing the request, or a file handle from
-    which to read it.
+    $csr may be a scalar containing the request, a file name, or a file
+    handle from which to read it.
+
+    If a file name is specified, the readFile option must be specified.
 
     If a file handle is supplied, the caller should specify acceptPEM => 0
     if the contents are DER.
@@ -151,6 +160,11 @@ METHODS
     Call error() to obtain more detail.
 
   options
+
+    The options are specified as name => value.
+
+    If the first option is a HASHREF, it is expanded and any remaining
+    options are added.
 
     acceptPEM
 
@@ -184,6 +198,14 @@ METHODS
 
       If false, invalid base64 characters in PEM data will cause the CSR to
       be rejected.
+
+      The default is false.
+
+    readFile
+
+      If true, $csr is the name of a file containing the CSR.
+
+      If false, $csr contains the CSR or is an open file handle.
 
       The default is false.
 
@@ -734,6 +756,8 @@ CHANGES
        - Verify signature of CSRs in new() by default.  Add checkSignature().
     
        - Optionally allow invalid base64 character in PEM data.
+    
+       - Allow new() from filename and options from hashref.
     
       
 
